Fix calendar event text overflow

--- a/jikan_control/static/css/style.css
+++ b/jikan_control/static/css/style.css
@@ -216,6 +216,14 @@
 #current-day-modal .current-day-number {
   font-size: 92px; }
 
+@media (max-width: 1065px) {
+  #calendar .day-item .event.event-large {
+    display: block;
+    width: 12ch;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis; } }
+
 @media (max-width: 900px) {
   #calendar .day-item .event.event-small {
     display: block; }
