--- a/theme/scss/_calendar.scss
+++ b/theme/scss/_calendar.scss
@@ -154,6 +154,16 @@
   }
 }
 
+@media (max-width: 1065px){
+  #calendar .day-item .event.event-large{
+    display: block;
+    width: 12ch;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+  }
+}
+
 @media (max-width: 900px){
   #calendar .day-item .event.event-small{
     display: block;
